@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: relational.h,v 1.9 2008/02/08 22:12:33 c_anthon Exp $
+ * $Id: relational.h,v 1.10 2008/02/09 14:01:41 Superfly_Jon Exp $
  */
 
 #ifndef _RELATIONAL_H_
@@ -36,9 +36,9 @@ typedef struct _RowSet
 
 extern RowSet* RunQuery(char *sz);
 extern RowSet* MallocRowset(size_t rows, size_t cols);
+extern void SetRowsetData(RowSet *rs, size_t row, size_t col, const char *data);
 extern void FreeRowset(RowSet* pRow);
 extern int RelationalUpdatePlayerDetails(int player_id, const char* newName, const char* newNotes);
-extern void SetRowsetData(RowSet *rs, size_t row, size_t col, const char *data);
 extern float Ratio(float a, int b);
 
 #endif /* _RELATIONAL_H_ */
