@@ -18,7 +18,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: sgf_y.y,v 1.4 2008/02/07 22:29:36 Superfly_Jon Exp $
+ * $Id: sgf_y.y,v 1.5 2008/02/09 14:01:41 Superfly_Jon Exp $
  */
 
 %{
@@ -72,7 +72,7 @@ static char *Concatenate( listOLD *pl ) {
 
 	pchDest--;
 	
-	g_free( pl->plNext->p );
+	free( pl->plNext->p );
 	ListDelete( pl->plNext );
     }
 
