@@ -1,3 +1,7 @@
+Sat Feb  9 14:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>
+
+	* dbprovider.c, relational.c: Added game stats to database
+
 Fri Feb  8 23:11:13 CET 2008 Christian Anthon <anthon@kiku.dk>
 
 	* Makefile.am, dbprovider.c, relational.h: allow code to compile
